[metadata]
name = bulkhours
version = attr:bulkhours.__version__.__version__
long_description = file: README.md
classifiers =
    Framework :: Jupyter
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
recommended_python = 3.11

[options.entry_points]
console_scripts =
    bulkhours-correct = bulkhours.core.evaluation:dump_corrections
    bulkhours-boids = bulkhours.bots.boids.simulation:main
    bulkhours-git-push = bulkhours.core:git_push
